css/main.css
/* ... */
.our-team .member-8 .member-picture img {
    height: auto;
    width: 141px
}

.our-team .member-9 .member-picture img {
    height: auto;
    width: 147px
}

.our-team .member .member-name {
    width: 240px;
    font-family: "HelveticaNeue-Medium", Helvetica, Arial, serif;
    font-size: 24px;
    line-height: 29px;
    color: #414042;
    text-align: center;
    margin-top: 16px;
}

.our-team .member .member-position {
    width: 240px;
    font-family: "HelveticaNeue-Medium", Helvetica, Arial, serif;
    font-size: 18px;
    line-height: 22px;
    color: #414042;
    text-align: center;
}

/* end about us | our team */
/* start about us | contact us */
.contact-us {
    padding-top: 160px;
}

.contact-us iframe {
    width: 100%;
    float: right;
}

.contact-us .contact-details {
    float: left;
    width: 50%;
}

.contact-us .map {
    position: relative;
    top: -130px;
    width: 50%;
    float: left;
    overflow: hidden;
}

.contact-us h2 {
    font-family: "HelveticaNeue-Medium", Helvetica, Arial, serif;
    font-size: 48px;
    font-weight: normal;
    line-height: 58px;
    color: #414042;
}

.contact-us p {
    font-family: "HelveticaNeue", Helvetica, Arial, serif;
    font-size: 24px;
    font-weight: normal;
    line-height: 29px;
    color: #414042;
}

/* end about us | contact us */
/* start header | FAQ page */
.faq-header {
    height: 100vh;
}

.faq-header .banner h1 {
    width: 100%;
    font-size: 48px;
    line-height: 58px;
}

.faq-header .banner button {
    background-color: #ecf0f1;
    color: #414042;
    height: 67px;
    width: 345px;
    border-radius: 33px;
    margin: 23px;
}

/* end header | FAQ page */
/* start footer */
footer {
    background: url(../img/home-path-6.svg);
    background-size: cover;
    padding: 60px 0;
    padding-top: 120px;
}

footer .container {
    overflow: visible
}

footer .row {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-pack: distribute;
    justify-content: space-around;
}

footer .col {
    float: left;
    position: relative;
}

footer .col-1x {
    width: 20%;
}

footer .col-2x {
    width: 40%;
    padding-right: 16%;
}

footer .company-logo {
    position: absolute;
    left: 0;
    top: -80px;
}

footer ul {
    list-style-type: none;
    -webkit-padding-start: 0;
    padding: 0;
}

footer ul li a {
    font-size: 16px;
    color: #000;
    line-height: 26px;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    text-decoration: none;
}

footer ul li a:hover,
footer li a:focus {
    color: #f15a29;
    text-decoration: none;
}

footer p {
    font-size: 18px;
    color: #000;
    line-height: 23px;
    font-weight: normal;
}

footer p span {
    font-weight: 600;
}

footer p .mail {
    color: #f15a29;
}

footer p .mail:hover,
footer p .mail:focus {
    text-decoration: none;
}

footer .follow-us img {
    width: 24px;
}

footer .copyright {
    font-size: 12px;
    color: #909090;
}

/* end footer */
/* media queries */
@media(max-width: 1280px) {
    .our-process .bullet-2 {
        left: 39.5%;
    }

    .our-process .bullet-4 {
        left: 54%;
    }

    .our-process .step-5 {
        left: 13%;
        width: 54%;
    }

    .our-process .end-artwork {
        width: auto;
        height: 156px;
    }

    .our-process .artwork-2 {
        left: auto;
        right: 19px;
    }

    .our-process .step-2 {
        width: 33%;
    }

    .our-process .step-3 {
        left: 7.5%;
        width: 30%;
    }

    .our-process .step-4 {
        left: 66%;
        width: 28%;
    }
}
/* ... */

